--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
-<!doctype html><html class="no-js"><head><meta charset="utf-8"><meta name="description" content=""><meta name="viewport" content="width=device-width,initial-scale=1"><title>nacu411</title><link rel="apple-touch-icon" href="apple-touch-icon.png"><link rel="stylesheet" href="styles/main.css"><script src="scripts/vendor/modernizr.js"></script></head><body><!--[if IE]><p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p><![endif]--><div class="welcome_text-wrapper"><h1 class="welcome_text">Soon there will be something interesting</h1></div><div class="contacts_block"><a href="https://www.vk.com/wthaydh" id="vk_icon" class="social_link" title="vk"></a> <a href="https://www.behance.net/kfedorov788d5f" id="behance_icon" class="social_link" title="behance"></a> <span id="email">kfedorov78@gmail.com</span></div><script>!function(e,a,t,n,g,c){e.GoogleAnalyticsObject=n,e.ga||(e.ga=function(){(e.ga.q=e.ga.q||[]).push(arguments)}),e.ga.l=+new Date,g=a.createElement(t),c=a.getElementsByTagName(t)[0],g.src="https://www.google-analytics.com/analytics.js",c.parentNode.insertBefore(g,c)}(window,document,"script","ga"),ga("create","UA-XXXXX-X"),ga("send","pageview")</script><script src="scripts/vendor.js"></script><script src="scripts/plugins.js"></script><script src="scripts/main.js"></script></body></html>
+<!doctype html>
+<html class="no-js">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>nacu411</title>
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="stylesheet" href="styles/main.css">
+</head>
+
+<body>
+
+	<h1 class="title"><strong>Киса</strong>, с днем рождения!</h1>
+   	<div class="wrapper">
+   		<p>
+   			<strong>Дашенька</strong>, любимая моя, для нас это твой первый день рождения, который мы проводим "вместе". <br>За эти 4.5 месяца я думаю, что хорошо узнал тебя. 4 года назад я со своим другом шел от тебя и говорил ему, какая ты умная, начитанная, сообразительная, что ты не такая как все и вообще охуеть как я рад, что у меня есть такая знакомая. Тогда я по уши влюбился в тебя и хотел проводить с тобой все свое свободное время.
+   		</p>
+   		<p>
+   			Сейчас же я люблю тебя и считаю тебя идеальным, без преувеличений, <strong>человеком</strong>. Казалось бы, что ты сочетаешь в себе несочетаемое - это очень удивляет и заставляет восхищаться тобой ещё больше. Но с другой стороны в тебе все гармонично и все так отлично сложенно. Ты олицетворение всего прекрасного и любимого мной. 
+   		</p>
+   		<p>
+   			Ты, <strong>киса</strong>, очаровательный человечек и сегодня твой день рождения, что очень радует меня. Ведь это твой день рождения, именно твой, <strong>зайка</strong>. 19 лет назад свершилось чудо - появилась <strong>Филиппова Дарья Александровна Солнышка</strong>, которую я очень люблю.
+   		</p>
+   		<p>
+   			Я действительно считаю, что ты очень многого достигнешь и ты именно тот человек, который значительно поможет миру поменяться в лучшую, для всех нас, сторону. Ты очень <strong>добрый</strong>, понимающий, <strong>верный</strong>, чуткий, <strong>заботливый</strong> и любящий человек, <strong>отличный друг</strong> и охуеннейший половой партнер. Я всегда хочу быть только с тобой и помогать тебе во всем. 
+   		</p>
+		<p>
+			Хочу наслаждаться твоим <strong>прекрасным телом</strong>. Хочу просыпаться и видеть тебя напротив. Хочу пожелать тебе терпения, мотивации и охуенно здоровый мешок денег, который нужен всем. Ещё раз поздравляю тебя с днем рождения, <strong>киса</strong>. Спасибо, что ты есть и делаешь мою жизнь лучше. Безумно рад, что мы с тобой вместе и надеюсь, что наша близость никогда не закончится.
+		</p>
+
+		<strong>С каждым годом ты становишься все лучше и лучше, Киса, бескоечно сильно люблю тебя и обожаю!</strong>
+   	</div>
+    <script src="scripts/main.js">
+    </script>
+</body>
+
+</html>
