--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			Хочу наслаждаться твоим <strong>прекрасным телом</strong>. Хочу просыпаться и видеть тебя напротив. Хочу пожелать тебе терпения, мотивации и охуенно здоровый мешок денег, который нужен всем. Ещё раз поздравляю тебя с днем рождения, <strong>киса</strong>. Спасибо, что ты есть и делаешь мою жизнь лучше. Безумно рад, что мы с тобой вместе и надеюсь, что наша близость никогда не закончится.
 		</p>
 
-		<strong>С каждым годом ты становишься все лучше и лучше, Киса, бескоечно сильно люблю тебя и обожаю!</strong>
+		<strong>С каждым годом ты становишься все лучше и лучше, Киса, бесконечно сильно люблю тебя и обожаю!</strong>
    	</div>
     <script src="scripts/main.js">
     </script>
